Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7
-
None
-
49dc279bd (dev), d05e13faa (6.7)
Description
See attached project:
Main.qml:10: (strict mode) Could not compile function change: Cannot generate efficient code for write-back of value affected by side effects
Object types are not written back, so this is obviously wrong.
Attachments
For Gerrit Dashboard: QTBUG-117798 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
540818,2 | QmlCompiler: Use original scope type for SetLookup | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
542027,2 | QmlCompiler: Use original scope type for SetLookup | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |